@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-13T08:27:34Z",
-  "count" : 67,
-  "count_minmax" : [ 67, 106 ],
-  "count_decinc" : [ -39, +106 ],
-  "uniques" : 10,
-  "uniques_minmax" : [ 10, 13 ],
-  "uniques_decinc" : [ -3, +13 ]
+  "timestamp" : "2022-09-13T16:29:48Z",
+  "count" : 26,
+  "count_minmax" : [ 26, 106 ],
+  "count_decinc" : [ -80, +106 ],
+  "uniques" : 6,
+  "uniques_minmax" : [ 6, 13 ],
+  "uniques_decinc" : [ -7, +13 ]
 }
