@@ -1,11 +1,11 @@
 {
-  "count": 105,
-  "uniques": 16,
+  "count": 64,
+  "uniques": 13,
   "clones": [
     {
       "timestamp": "2022-08-30T00:00:00Z",
-      "count": 67,
-      "uniques": 10
+      "count": 26,
+      "uniques": 6
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
