@@ -1,3 +1,11 @@
+2022-09-13T16:29:48Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3046766358
+* notice: last 14d: unq all: 13 64
+* notice: prev accum: outdated-unq outdated-all / unq all: 1 1 / 33 106
+* notice: next accum: outdated-unq outdated-all / unq all: 1 1 / 29 65
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -4 -41 / +13 +106 -7 -80 / 6 26
+* notice: removed / changed dates: [] / [2022-08-30]
+
 2022-09-13T08:27:34Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3043503025
 * notice: last 14d: unq all: 16 105
